# wilton_winservice

./: CMakeLists.txt  appveyor.yml
resources/: wilton_winservice.rc
src/: winservice.cpp  winservice_config.hpp  winservice_exception.hpp  winservice_options.hpp
